; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/can/extr_bcm.c_bcm_proc_getifname.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/can/extr_bcm.c_bcm_proc_getifname.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i8* }

@.str = private unnamed_addr constant [4 x i8] c"any\00", align 1
@dev_base_lock = common dso_local global i32 0, align 4
@init_net = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [4 x i8] c"???\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i32)* @bcm_proc_getifname to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @bcm_proc_getifname(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.net_device*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %5, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %2
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8** %3, align 8
  br label %28

10:                                               ; preds = %2
  %11 = call i32 @read_lock(i32* @dev_base_lock)
  %12 = load i32, i32* %5, align 4
  %13 = call %struct.net_device* @__dev_get_by_index(i32* @init_net, i32 %12)
  store %struct.net_device* %13, %struct.net_device** %6, align 8
  %14 = load %struct.net_device*, %struct.net_device** %6, align 8
  %15 = icmp ne %struct.net_device* %14, null
  br i1 %15, label %16, label %22

16:                                               ; preds = %10
  %17 = load i8*, i8** %4, align 8
  %18 = load %struct.net_device*, %struct.net_device** %6, align 8
  %19 = getelementptr inbounds %struct.net_device, %struct.net_device* %18, i32 0, i32 0
  %20 = load i8*, i8** %19, align 8
  %21 = call i32 @strcpy(i8* %17, i8* %20)
  br label %25

22:                                               ; preds = %10
  %23 = load i8*, i8** %4, align 8
  %24 = call i32 @strcpy(i8* %23, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0))
  br label %25

25:                                               ; preds = %22, %16
  %26 = call i32 @read_unlock(i32* @dev_base_lock)
  %27 = load i8*, i8** %4, align 8
  store i8* %27, i8** %3, align 8
  br label %28

28:                                               ; preds = %25, %9
  %29 = load i8*, i8** %3, align 8
  ret i8* %29
}

declare dso_local i32 @read_lock(i32*) #1

declare dso_local %struct.net_device* @__dev_get_by_index(i32*, i32) #1

declare dso_local i32 @strcpy(i8*, i8*) #1

declare dso_local i32 @read_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
